Fix: fixed router for navbar and footer, added Page component to wrap both the navbar and footer around the page. removed fixed position for the footer (it will look weird in the homepage but thats because theres no content on there yet)

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,8 +3,6 @@
   justify-content: center;
   align-items: center;
   background-color: #1c2e4a;
-  position: absolute;
-  bottom: 0;
   padding: 45px 10px 45px 60px;
 }
 
