--- a/src/pages/Council members/css/CouncilMembers.css
+++ b/src/pages/Council members/css/CouncilMembers.css
@@ -20,3 +20,7 @@
   display: flex;
   justify-content: center;
 }
+
+.Council-Members {
+  min-height: fit-content;
+}
